<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victor.myapplication.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/textUser"
        android:text="@string/usuario"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/user"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/textsenha"
        android:text="@string/senha"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/senha"
        android:inputType="textPassword"
        />
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="0,1">
        <TableRow>
            <Button
                android:id="@+id/buttonLogin"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="loginB"
                android:text="@string/login"
                android:layout_margin="10dp"
                android:background="@drawable/botao_customizado"
                />
            <Button
                android:id="@+id/buttonAdd"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="addB"
                android:text="@string/add"
                android:layout_margin="10dp"
                android:background="@drawable/botao_customizado"
                />
        </TableRow>
    </TableLayout>



</LinearLayout>